changed skill styles

--- a/developer-portfolio-template/css/style.css
+++ b/developer-portfolio-template/css/style.css
@@ -251,7 +251,7 @@ a:focus {
   position: relative;
   width: 100%;
   margin-bottom: 45px;
-  padding: 190px 0 0 0;
+  padding: 290px 0 0 0;
   overflow: hidden;
   background: linear-gradient(rgba(239, 35, 60, 0.95), rgba(239, 35, 60, 0.95)),
     url(../img/hero-bg.jpg);
@@ -263,8 +263,8 @@ a:focus {
 }
 
 .hero .hero-image img {
-  width: 600px;
-  height: 600px;
+  width: 500px;
+  height: 500px;
   object-fit: cover;
 }
 
@@ -503,7 +503,15 @@ a:focus {
 .about .skills {
   margin-bottom: 30px;
 }
+.about .skillRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
+.about .skillRowItem {
+  width: 300px;
+}
 .about .skill-name {
   margin-top: 15px;
 }
